changed Html, to place background images in link tags to help remove flickering issues

--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,6 @@ a{
   left: 0;
   top: 0;
   transition: background-image 1s linear;
-  -webkit-backface-visibility: hidden
 }
 
 
